CSS Z-Index fix (loginas)
Also edited
.moodle/local/loginas/yiu/quickloginas/assests/skins/sam/quickloginas.css
29 .user-loginas-panel
{width:400px;background-color:#666;position:absolute;top:10%;left:10%;border:1px
solid #666;border-width    :0 5px 5px 0; z-index:100; }

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ span.icon-stack .pull-right-down {
     padding-top: 0.4em;
     padding-left: 0.7em;    
 }
+/* Give the links a sane Z-index (bootstrap gives .tooltip a z-index of 1030) */
+a.tooltip {
+    z-index: 0;
+}
 
 /* Moodle Bar Tooltips- fancy rollovers used on the quick launch images*/
 a.tooltip span.text {
